--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "webpack-examples",
   "version": "1.0.0",
+  "license": "MIT",
   "sideEffects": false,
   "dependencies": {
     "@types/node": "^12.0.0",
