--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "css-loader": "3.4.2",
     "html-webpack-plugin": "4.0.0-beta.11",
     "shx": "0.3.2",
+    "style-loader": "1.1.3",
     "typescript": "~3.7.2",
     "ts-loader": "6.2.1",
     "ts-node": "8.6.2",
@@ -28,6 +30,7 @@
     "build-no-config": "yarn clean && webpack js-only/main.js --mode production",
     "build-basic": "yarn clean && webpack --config webpack-basic.js --mode production",
     "build-small": "yarn clean && webpack --config webpack-small-chunks.js --mode production",
+    "build-basic-css": "yarn clean && webpack --config webpack-basic-css.js --mode production",
     "build-multi": "yarn clean && webpack --config webpack-multi-page-array.js --mode production",
     "build-multi-bug": "yarn clean && webpack --config webpack-multi-page-shake-bug.js --mode production",
     "build-multi-small": "yarn clean && webpack --config webpack-multi-page-small.js --mode production --experimental-modules"
